base.css: fix for Jumping Scrollbar Issue

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -24,6 +24,9 @@ html, body {
 
   background-color: var(--bg-color);
   color: var(--main-color);
+
+  /* Fix for Jumping Scrollbar Issue  */
+  padding-left: calc(100vw - 100%);
 }
 
 .app > main {
